Fix sqlite dependency and change how sqlite connection works.