@@ -1,5 +1,6 @@
 package model;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -9,24 +10,26 @@ import java.sql.DriverManager;
 import java.sql.SQLException;
 
 public class DBManager {
-    public static void connect() {
-        Path dbPath = Paths.get("../resources/test_dbs/db.sql");
-        String dbUrl = "jdbc:sqlite:" + dbPath;
-        if (!Files.exists(dbPath)) {
+    public static Connection connect() {
+        File dbPath = new File("database/log.db");
+        System.out.println(dbPath.getAbsolutePath());
+        if (!Files.exists(Path.of(dbPath.getAbsolutePath()))) {
             try {
-                Files.createFile(dbPath);
+                Files.createDirectories(Path.of(dbPath.getParentFile().getCanonicalPath()));
+                Files.createFile(Path.of(dbPath.getAbsolutePath()));
             } catch (IOException theE) {
-                System.err.println("Error creating database at " + dbPath);
+                System.err.println("Error creating database " + dbPath);
                 System.exit(1);
             }
         }
 
+        String dbUrl = "jdbc:sqlite:" + dbPath.getAbsolutePath();
+        System.out.println(dbUrl);
         try {
-            Connection dbCon = DriverManager.getConnection(dbUrl);
+            return DriverManager.getConnection(dbUrl);
         } catch (SQLException theE) {
-            System.err.println("Error connect to database at " + dbPath);
+            System.err.println("Error connecting to database " + theE.getMessage());
             System.exit(1);
         }
-
     }
 }
